--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
     <string name="app_name">vople</string>
     <string name="title_activity_login">Sign in</string>
     <!-- Strings related to login -->
